parser/y.output

0: shift/reduce conflict (shift 4(0), red'n 4(0)) on SEMICOLON
0: shift/reduce conflict (shift 18(0), red'n 4(0)) on COMMENT
0: shift/reduce conflict (shift 17(0), red'n 4(0)) on BRACE_OPEN
0: shift/reduce conflict (shift 39(0), red'n 4(0)) on PAREN_OPEN
0: shift/reduce conflict (shift 29(0), red'n 4(0)) on MINUS
0: shift/reduce conflict (shift 28(0), red'n 4(0)) on BANG
0: shift/reduce conflict (shift 40(0), red'n 4(0)) on NULL
0: shift/reduce conflict (shift 41(0), red'n 4(0)) on FALSE
0: shift/reduce conflict (shift 42(0), red'n 4(0)) on TRUE
0: shift/reduce conflict (shift 20(0), red'n 4(0)) on IF
0: shift/reduce conflict (shift 21(0), red'n 4(0)) on WHILE
0: shift/reduce conflict (shift 19(0), red'n 4(0)) on FUNC
0: shift/reduce conflict (shift 37(0), red'n 4(0)) on ANON_FUNC
0: shift/reduce conflict (shift 9(0), red'n 4(0)) on RETURN
0: shift/reduce conflict (shift 38(0), red'n 4(0)) on FLOAT
0: shift/reduce conflict (shift 43(0), red'n 4(0)) on INTEGER
0: shift/reduce conflict (shift 44(0), red'n 4(0)) on STRING
0: shift/reduce conflict (shift 15(0), red'n 4(0)) on IDENTIFIER
state 0
	$accept: .program $end 
	statements: .    (4)

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  reduce 4 (src line 74)

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 3
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7
	statements  goto 2
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  statements.    (1)
	statements:  statements.statement 

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  reduce 1 (src line 65)

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 45
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7

state 3
	statements:  statement.    (2)

	.  reduce 2 (src line 71)


state 4
	statement:  SEMICOLON.    (5)

	.  reduce 5 (src line 77)


state 5
	statement:  terminated.SEMICOLON 

	SEMICOLON  shift 46
	.  error


state 6
	statement:  unterminated.    (7)

	.  reduce 7 (src line 80)


state 7
	terminated:  assignment.    (8)

	.  reduce 8 (src line 83)


state 8
	terminated:  expression.    (9)

	.  reduce 9 (src line 85)


state 9
	terminated:  RETURN.expression 
	terminated:  RETURN.    (11)

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  reduce 11 (src line 87)

	expression  goto 47
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 10
	unterminated:  block.    (13)

	.  reduce 13 (src line 92)


state 11
	unterminated:  comment.    (14)

	.  reduce 14 (src line 94)


state 12
	unterminated:  func.    (15)

	.  reduce 15 (src line 95)


state 13
	unterminated:  if.    (16)

	.  reduce 16 (src line 96)


state 14
	unterminated:  while.    (17)

	.  reduce 17 (src line 97)


state 15
	assignment:  IDENTIFIER.EQUAL expression 
	identifier:  IDENTIFIER.    (64)

	EQUAL  shift 49
	.  reduce 64 (src line 189)


state 16
	expression:  binary.    (27)

	.  reduce 27 (src line 119)


17: shift/reduce conflict (shift 4(0), red'n 4(0)) on SEMICOLON
17: shift/reduce conflict (shift 18(0), red'n 4(0)) on COMMENT
17: shift/reduce conflict (shift 17(0), red'n 4(0)) on BRACE_OPEN
17: shift/reduce conflict (shift 39(0), red'n 4(0)) on PAREN_OPEN
17: shift/reduce conflict (shift 29(0), red'n 4(0)) on MINUS
17: shift/reduce conflict (shift 28(0), red'n 4(0)) on BANG
17: shift/reduce conflict (shift 40(0), red'n 4(0)) on NULL
17: shift/reduce conflict (shift 41(0), red'n 4(0)) on FALSE
17: shift/reduce conflict (shift 42(0), red'n 4(0)) on TRUE
17: shift/reduce conflict (shift 20(0), red'n 4(0)) on IF
17: shift/reduce conflict (shift 21(0), red'n 4(0)) on WHILE
17: shift/reduce conflict (shift 19(0), red'n 4(0)) on FUNC
17: shift/reduce conflict (shift 37(0), red'n 4(0)) on ANON_FUNC
17: shift/reduce conflict (shift 9(0), red'n 4(0)) on RETURN
17: shift/reduce conflict (shift 38(0), red'n 4(0)) on FLOAT
17: shift/reduce conflict (shift 43(0), red'n 4(0)) on INTEGER
17: shift/reduce conflict (shift 44(0), red'n 4(0)) on STRING
17: shift/reduce conflict (shift 15(0), red'n 4(0)) on IDENTIFIER
state 17
	block:  BRACE_OPEN.statements BRACE_CLOSE 
	statements: .    (4)

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  reduce 4 (src line 74)

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 3
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7
	statements  goto 50

state 18
	comment:  COMMENT.    (19)

	.  reduce 19 (src line 102)


state 19
	func:  FUNC.IDENTIFIER PAREN_OPEN func_arguments PAREN_CLOSE statement 

	IDENTIFIER  shift 51
	.  error


state 20
	if:  IF.expression statement ELSE statement 
	if:  IF.expression statement 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	expression  goto 52
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 21
	while:  WHILE.expression statement 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	expression  goto 53
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 22
	binary:  logical.    (28)

	.  reduce 28 (src line 123)


state 23
	logical:  equality.AND logical 
	logical:  equality.OR logical 
	logical:  equality.    (31)

	AND  shift 54
	OR  shift 55
	.  reduce 31 (src line 130)


state 24
	equality:  comparison.EQUAL_EQUAL equality 
	equality:  comparison.BANG_EQUAL equality 
	equality:  comparison.    (34)

	EQUAL_EQUAL  shift 56
	BANG_EQUAL  shift 57
	.  reduce 34 (src line 136)


state 25
	comparison:  multiplication.LESS comparison 
	comparison:  multiplication.GREATER comparison 
	comparison:  multiplication.LESS_EQUAL comparison 
	comparison:  multiplication.GREATER_EQUAL comparison 
	comparison:  multiplication.    (39)

	LESS  shift 58
	LESS_EQUAL  shift 60
	GREATER  shift 59
	GREATER_EQUAL  shift 61
	.  reduce 39 (src line 144)


state 26
	multiplication:  addition.PERCENT multiplication 
	multiplication:  addition.SLASH multiplication 
	multiplication:  addition.STAR multiplication 
	multiplication:  addition.    (43)

	STAR  shift 64
	SLASH  shift 63
	PERCENT  shift 62
	.  reduce 43 (src line 151)


27: shift/reduce conflict (shift 66(0), red'n 46(0)) on MINUS
state 27
	addition:  unary.PLUS addition 
	addition:  unary.MINUS addition 
	addition:  unary.    (46)

	PLUS  shift 65
	MINUS  shift 66
	.  reduce 46 (src line 157)


state 28
	unary:  BANG.primary 

	PAREN_OPEN  shift 39
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	primary  goto 67
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 29
	unary:  MINUS.primary 

	PAREN_OPEN  shift 39
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	primary  goto 68
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

30: shift/reduce conflict (shift 69(0), red'n 49(0)) on PAREN_OPEN
state 30
	unary:  primary.    (49)
	primary:  primary.PAREN_OPEN arguments PAREN_CLOSE 
	primary:  primary.DOT IDENTIFIER 

	DOT  shift 70
	PAREN_OPEN  shift 69
	.  reduce 49 (src line 163)


state 31
	primary:  anon_func.    (52)

	.  reduce 52 (src line 169)


state 32
	primary:  float.    (53)

	.  reduce 53 (src line 170)


state 33
	primary:  group.    (54)

	.  reduce 54 (src line 171)


state 34
	primary:  identifier.    (55)

	.  reduce 55 (src line 172)


state 35
	primary:  integer.    (56)

	.  reduce 56 (src line 173)


state 36
	primary:  string.    (57)

	.  reduce 57 (src line 174)


state 37
	anon_func:  ANON_FUNC.PAREN_OPEN func_arguments PAREN_CLOSE statement 

	PAREN_OPEN  shift 71
	.  error


state 38
	float:  FLOAT.    (62)

	.  reduce 62 (src line 185)


state 39
	group:  PAREN_OPEN.expression PAREN_CLOSE 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	expression  goto 72
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 40
	identifier:  NULL.    (65)

	.  reduce 65 (src line 191)


state 41
	identifier:  FALSE.    (66)

	.  reduce 66 (src line 192)


state 42
	identifier:  TRUE.    (67)

	.  reduce 67 (src line 193)


state 43
	integer:  INTEGER.    (68)

	.  reduce 68 (src line 196)


state 44
	string:  STRING.    (69)

	.  reduce 69 (src line 198)


state 45
	statements:  statements statement.    (3)

	.  reduce 3 (src line 73)


state 46
	statement:  terminated SEMICOLON.    (6)

	.  reduce 6 (src line 79)


state 47
	terminated:  RETURN expression.    (10)

	.  reduce 10 (src line 86)


state 48
	identifier:  IDENTIFIER.    (64)

	.  reduce 64 (src line 189)


state 49
	assignment:  IDENTIFIER EQUAL.expression 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	expression  goto 73
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 50
	statements:  statements.statement 
	block:  BRACE_OPEN statements.BRACE_CLOSE 

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	BRACE_CLOSE  shift 74
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  error

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 45
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7

state 51
	func:  FUNC IDENTIFIER.PAREN_OPEN func_arguments PAREN_CLOSE statement 

	PAREN_OPEN  shift 75
	.  error


state 52
	if:  IF expression.statement ELSE statement 
	if:  IF expression.statement 

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  error

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 76
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7

state 53
	while:  WHILE expression.statement 

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  error

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 77
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7

state 54
	logical:  equality AND.logical 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	logical  goto 78
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 55
	logical:  equality OR.logical 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	logical  goto 79
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 56
	equality:  comparison EQUAL_EQUAL.equality 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	equality  goto 80
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 57
	equality:  comparison BANG_EQUAL.equality 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	equality  goto 81
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 58
	comparison:  multiplication LESS.comparison 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	comparison  goto 82
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 59
	comparison:  multiplication GREATER.comparison 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	comparison  goto 83
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 60
	comparison:  multiplication LESS_EQUAL.comparison 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	comparison  goto 84
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 61
	comparison:  multiplication GREATER_EQUAL.comparison 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	comparison  goto 85
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 62
	multiplication:  addition PERCENT.multiplication 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	multiplication  goto 86
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 63
	multiplication:  addition SLASH.multiplication 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	multiplication  goto 87
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 64
	multiplication:  addition STAR.multiplication 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	multiplication  goto 88
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 65
	addition:  unary PLUS.addition 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	addition  goto 89
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

state 66
	addition:  unary MINUS.addition 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	addition  goto 90
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36

67: shift/reduce conflict (shift 69(0), red'n 47(0)) on PAREN_OPEN
state 67
	unary:  BANG primary.    (47)
	primary:  primary.PAREN_OPEN arguments PAREN_CLOSE 
	primary:  primary.DOT IDENTIFIER 

	DOT  shift 70
	PAREN_OPEN  shift 69
	.  reduce 47 (src line 160)


68: shift/reduce conflict (shift 69(0), red'n 48(0)) on PAREN_OPEN
state 68
	unary:  MINUS primary.    (48)
	primary:  primary.PAREN_OPEN arguments PAREN_CLOSE 
	primary:  primary.DOT IDENTIFIER 

	DOT  shift 70
	PAREN_OPEN  shift 69
	.  reduce 48 (src line 162)


state 69
	primary:  primary PAREN_OPEN.arguments PAREN_CLOSE 
	arguments: .    (60)

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  reduce 60 (src line 180)

	expression  goto 92
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	arguments  goto 91

state 70
	primary:  primary DOT.IDENTIFIER 

	IDENTIFIER  shift 93
	.  error


state 71
	anon_func:  ANON_FUNC PAREN_OPEN.func_arguments PAREN_CLOSE statement 
	func_arguments: .    (23)

	IDENTIFIER  shift 95
	.  reduce 23 (src line 109)

	func_arguments  goto 94

state 72
	group:  PAREN_OPEN expression.PAREN_CLOSE 

	PAREN_CLOSE  shift 96
	.  error


state 73
	assignment:  IDENTIFIER EQUAL expression.    (12)

	.  reduce 12 (src line 90)


state 74
	block:  BRACE_OPEN statements BRACE_CLOSE.    (18)

	.  reduce 18 (src line 100)


state 75
	func:  FUNC IDENTIFIER PAREN_OPEN.func_arguments PAREN_CLOSE statement 
	func_arguments: .    (23)

	IDENTIFIER  shift 95
	.  reduce 23 (src line 109)

	func_arguments  goto 97

76: shift/reduce conflict (shift 98(0), red'n 25(0)) on ELSE
state 76
	if:  IF expression statement.ELSE statement 
	if:  IF expression statement.    (25)

	ELSE  shift 98
	.  reduce 25 (src line 114)


state 77
	while:  WHILE expression statement.    (26)

	.  reduce 26 (src line 117)


state 78
	logical:  equality AND logical.    (29)

	.  reduce 29 (src line 127)


state 79
	logical:  equality OR logical.    (30)

	.  reduce 30 (src line 129)


state 80
	equality:  comparison EQUAL_EQUAL equality.    (32)

	.  reduce 32 (src line 133)


state 81
	equality:  comparison BANG_EQUAL equality.    (33)

	.  reduce 33 (src line 135)


state 82
	comparison:  multiplication LESS comparison.    (35)

	.  reduce 35 (src line 139)


state 83
	comparison:  multiplication GREATER comparison.    (36)

	.  reduce 36 (src line 141)


state 84
	comparison:  multiplication LESS_EQUAL comparison.    (37)

	.  reduce 37 (src line 142)


state 85
	comparison:  multiplication GREATER_EQUAL comparison.    (38)

	.  reduce 38 (src line 143)


state 86
	multiplication:  addition PERCENT multiplication.    (40)

	.  reduce 40 (src line 147)


state 87
	multiplication:  addition SLASH multiplication.    (41)

	.  reduce 41 (src line 149)


state 88
	multiplication:  addition STAR multiplication.    (42)

	.  reduce 42 (src line 150)


state 89
	addition:  unary PLUS addition.    (44)

	.  reduce 44 (src line 154)


state 90
	addition:  unary MINUS addition.    (45)

	.  reduce 45 (src line 156)


state 91
	primary:  primary PAREN_OPEN arguments.PAREN_CLOSE 
	arguments:  arguments.COMMA expression 

	COMMA  shift 100
	PAREN_CLOSE  shift 99
	.  error


state 92
	arguments:  expression.    (59)

	.  reduce 59 (src line 179)


state 93
	primary:  primary DOT IDENTIFIER.    (51)

	.  reduce 51 (src line 168)


state 94
	func_arguments:  func_arguments.COMMA IDENTIFIER 
	anon_func:  ANON_FUNC PAREN_OPEN func_arguments.PAREN_CLOSE statement 

	COMMA  shift 101
	PAREN_CLOSE  shift 102
	.  error


state 95
	func_arguments:  IDENTIFIER.    (22)

	.  reduce 22 (src line 108)


state 96
	group:  PAREN_OPEN expression PAREN_CLOSE.    (63)

	.  reduce 63 (src line 187)


state 97
	func:  FUNC IDENTIFIER PAREN_OPEN func_arguments.PAREN_CLOSE statement 
	func_arguments:  func_arguments.COMMA IDENTIFIER 

	COMMA  shift 101
	PAREN_CLOSE  shift 103
	.  error


state 98
	if:  IF expression statement ELSE.statement 

	SEMICOLON  shift 4
	COMMENT  shift 18
	BRACE_OPEN  shift 17
	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	IF  shift 20
	WHILE  shift 21
	FUNC  shift 19
	ANON_FUNC  shift 37
	RETURN  shift 9
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 15
	.  error

	expression  goto 8
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
	statement  goto 104
	unterminated  goto 6
	block  goto 10
	comment  goto 11
	func  goto 12
	if  goto 13
	while  goto 14
	terminated  goto 5
	assignment  goto 7

state 99
	primary:  primary PAREN_OPEN arguments PAREN_CLOSE.    (50)

	.  reduce 50 (src line 166)


state 100
	arguments:  arguments COMMA.expression 

	PAREN_OPEN  shift 39
	MINUS  shift 29
	BANG  shift 28
	NULL  shift 40
	FALSE  shift 41
	TRUE  shift 42
	ANON_FUNC  shift 37
	FLOAT  shift 38
	INTEGER  shift 43
	STRING  shift 44
	IDENTIFIER  shift 48
	.  error

	expression  goto 105
	binary  goto 16
	logical  goto 22
	equality  goto 23
	comparison  goto 24
	multiplication  goto 25
	addition  goto 26
	unary  goto 27
	primary  goto 30
	anon_func  goto 31
	float  goto 32
	group  goto 33
	identifier  goto 34
	integer  goto 35
	string  goto 36
